# RayTracingEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Core/include/: Color3.h  DebugFlags.h  Parser.h  Ray.h
Core/src/: Color3.cpp  Parser.cpp  Ray.cpp
Geometry/include/: HitInfo.h  Intersection.h  ObjectFactory.h
Geometry/include/Matrial/: Material.h
Geometry/include/RandomTesting/: BlackHole.h
Geometry/include/unitGeometricObjects/: HitObject.h  ObjectFactory.h  PrimitiveObjects.h  UnitCircle.h  UnitCube.h  UnitCylinder.h  UnitSphere.h
Geometry/include/unitGeometricObjects/Booleans/: Boolean.h  DifferenceBool.h  IntersectionBool.h  UnionBool.h
Geometry/include/unitGeometricObjects/creation/: ObjectFactory.h  TransformationManager.h
Geometry/src/: HitInfo.cpp  Intersection.cpp  ObjectFactory.cpp
Geometry/src/Matrial/: Material.cpp
Geometry/src/RandomTesting/: BlackHole.cpp
Geometry/src/unitGeometricObjects/: HitObject.cpp  ObjectFactory.cpp  PrimitiveObjects.cpp  UnitCircle.cpp  UnitCube.cpp  UnitCylinder.cpp  UnitSphere.cpp
Geometry/src/unitGeometricObjects/Booleans/: Boolean.cpp  DifferenceBool.cpp  IntersectionBool.cpp  UnionBool.cpp
Geometry/src/unitGeometricObjects/Creation/: ObjectFactory.cpp  TransformationManiger.cpp
Math/include/: GeometricFunctionsLookup.h  InverseTransformations.h  Point3.h  TransformationManager.h  Transformations.h  Vector3.h
Math/src/: GeometricFunctionsLookup.cpp  InverseTransformations.cpp  Point3.cpp  TransformationManager.cpp  TransformationManiger.cpp  Transformations.cpp  Vector3.cpp
ObjectsData/Lights/: lights.txt
ObjectsData/Objects/: bigCube.txt  chair.txt  cornerRounder.txt  fork.txt  glass.txt  knife.txt  mirror.txt  streetLightBulb.txt  streetLightPole.txt  tabel.txt  test.txt
ObjectsData/Objects/plate/: CylinderWithHole.txt  Plate.txt
ObjectsData/Objects/streetLight/: streetLightBulb.txt  streetLightPole.txt
ObjectsData/Scenes/: dinnerScene  streetSecne.txt  testScene
Rendering/include/: Camera.h  RayTracer.h  Scene.h
Rendering/include/Shaders/: AbstractShader.h  CookTorranceShading.h  LightSource.h
Rendering/include/Shaders/Material/: AbstractMaterial.h  FresnelMaterial.h
Rendering/include/Textures/: TextureFactory.h
Rendering/src/: Camera.cpp  RayTracer.cpp  Scene.cpp
Rendering/src/Shaders/: AbstractShader.cpp  CookTorranceShading.cpp  LightSource.cpp
Rendering/src/Shaders/Material/: AbstractMaterial.cpp  FresnelMaterial.cpp
Rendering/src/Textures/: TextureFactory.cpp
Tests/: BooleanTests.cpp  GeomatricObjectsTests.cpp  LookUpTableTest.cpp  TransformationTests.cpp
